# mot15-to-yolo

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml
src/: config.py  convert.py  parse.py  prepare.py
tests/: test_convert.py  test_parse.py
