[tool.poetry]
name = "mot15-to-yolo"
version = "0.1.0"
description = "Convert MOT15 dataset to YOLO format"
authors = ["Piotr Zieliński <piotrekzie100@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
dvc = "^3.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
